<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cap.</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <!-- Main activity -->
    <string name="video_quality_icon">Video quality</string>
    <string name="video_quality_title">Video Quality (bitrate)</string>
    <string name="video_quality_value">20 Mbps</string>
    
    <string name="resolution_icon">Resolution</string>
    <string name="resolution_title">Output Resolution</string>
    <string name="resolution_width_hint">width</string>
    <string name="resolution_x">x</string>
    <string name="resolution_height_hint">height</string>
    
    <string name="audio_record_icon">audio</string>
    <string name="audio_record_title">Audio recording</string>
    
    <string name="touch_pointer_icon">Touch pointer</string>
    <string name="touch_pointer_title">Touch pointer</string>
    
    <string name="duration_icon">duration</string>
    <string name="duration_title">Fixed duration</string>
    <string name="duration_value">5 min 30 sec</string>
    
    <string name="filename_icon"></string>
    <string name="filename_title">Save as</string>
    <string name="filename_path">sdcard/screenrecord/</string>
    <string name="filename_value_hint">recording</string>
    <string name="filename_extension">.mp4</string>
    
    <string name="record_button_text">Record</string>
    <string name="record_button_icon">record</string>

</resources>