<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/in.co.praveenkumar.scap"
    android:id="@+id/content_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="@dimen/main_view_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >

        <!-- Video Quality -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/video_quality_icon"
                    android:src="@drawable/theaters" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/video_quality_title"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="35dp" >

                <TextView
                    android:id="@+id/frame_rate_text"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:text="@string/video_quality_value" />

                <SeekBar
                    android:id="@+id/frame_rate_bar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/frame_rate_text"
                    android:max="30"
                    android:progress="10" />
            </RelativeLayout>
        </LinearLayout>

        <!-- Resolution -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/resolution_icon"
                    android:src="@drawable/photo_library" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/resolution_title"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:paddingLeft="40dp" >

                <EditText
                    android:id="@+id/resolution_height"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/resolution_height_hint"
                    android:inputType="number"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/resolution_x" />

                <EditText
                    android:id="@+id/resolution_width"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/resolution_width_hint"
                    android:inputType="number"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Audio -->

        <in.co.praveenkumar.scap.views.CustomCheckBox
            android:id="@+id/audio_checkbox"
            custom:name="@string/audio_record_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:defaultValue="true"
            custom:icon="@drawable/mic"
            custom:key="audiostate"
            custom:useSharedPrefs="true" />

        <!-- Touch pointer -->

        <in.co.praveenkumar.scap.views.CustomCheckBox
            android:id="@+id/touch_checkbox"
            custom:name="@string/touch_pointer_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:defaultValue="true"
            custom:icon="@drawable/touch_icon"
            custom:key="touchstate"
            custom:useSharedPrefs="true" />

        <!-- Duration -->

        <in.co.praveenkumar.scap.views.CustomCheckBox
            android:id="@+id/duration_checkbox"
            custom:name="@string/duration_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:defaultValue="true"
            custom:icon="@drawable/access_time"
            custom:key="durationstate"
            custom:summaryOff="5 min 30 sec"
            custom:useSharedPrefs="true" />

        <!-- Filename -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/filename_icon"
                    android:src="@drawable/folder" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/filename_title"
                    android:textStyle="bold" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical|left"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/filename_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="30dp"
                    android:hint="@string/filename_value_hint"
                    android:paddingLeft="146dp"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:text="@string/filename_path" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:gravity="center_vertical"
                    android:text="@string/filename_extension" />
            </FrameLayout>
        </LinearLayout>

        <!-- Record button -->

        <LinearLayout
            android:id="@+id/record_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/record_btn_bg"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="recordButtonClick"
            android:padding="10dp" >

            <TextView
                android:id="@+id/record_btn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/record_button_text"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/record_btn_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/record_button_icon"
                android:src="@drawable/radio_button_on_white" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>